# TriggerX

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: pages.yml  release.yml
dist-present/: index.html
dist-present/assets/: FormControl-BQLODiAb.js  FormControl-CKrnwjJh.js  FormControl-CovgMTaI.css  FormControl-CrzIfS2n.js  FormControl-D_SX-IHN.js  FormControl-Dc9WyfxX.js  FormControl-SsN4KO3k.js  FormControl-tn3GvSG_.js  Octicon-AOOETcIf.js  Octicon-B10R3Drl.js  Octicon-CQzIVave.js  Octicon-CVX-3WKp.js  Octicon-DEJRVruT.js  Octicon-DHkRGpzH.js  Octicon-DKWX2iiV.css  Octicon-DNQpoCcN.js  SettingsDialog-B3yx4nGa.js  SettingsDialog-B6XOj0ZU.js  SettingsDialog-Bc5FUDD1.js  SettingsDialog-Bool0wSq.js  SettingsDialog-CyGpb2Vk.js  SettingsDialog-DXxQ1fbu.js  SettingsDialog-nOVXtKMl.js  TaskDialog-A1laiI1c.js  TaskDialog-BUyDQqYY.js  TaskDialog-BWvjDSQe.css  TaskDialog-By6HGpxI.js  TaskDialog-C60FeZSt.js  TaskDialog-CZ6iIIll.js  TaskDialog-D_YQDQNc.js  TaskDialog-DeMa6TjX.js  TaskHistory-B9yS6_bR.js  TaskHistory-BFfaP565.js  TaskHistory-CCahTfHB.js  TaskHistory-CO386uZr.js  (+18 more)
src/: App.css  App.tsx  cron-utils.ts  cron-utils.tsx  ipc.ts  main.tsx  store.tsx  types.ts  utils.tsx
src-present/: .gitignore  App.tsx  index.html  tauri-mocks.ts  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  engine.rs  executor.rs  lib.rs  mailer.rs  main.rs  notifier.rs  orchestrator.rs  runtime.rs  scheduler.rs  template.rs
(+22 files in other folders)
