[package]
name = "triggerx"
version = "0.1.0"
description = "TriggerX - Lightweight Task Scheduler"
authors = ["you"]
edition = "2021"

[lib]
name = "triggerx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
